# Personal-AI-Financial-management

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: pytest.yml  ruff_check.yml
.streamlit/: example_secrets.toml
MoneyMate/: imageHandler.py  util.py
MoneyMate/views/: analyze.py  expense.py  homepage.py  scanReceipt.py
money_mate/: home_page.py
money_mate/agents/: receipt_extraction_agent.py
money_mate/handler/: receipt_handler.py
money_mate/pages/: 1_scan_receipt_page.py  2_analyze_page.py  3_expense_page.py
money_mate/types/: file_type.py  receipt_type.py
money_mate/utils/: file_util.py
tests/types/: test_file_type.py
