[project]
name = "MoneyMate"
version = "0.0.1"
dependencies = [
  "streamlit>=1.40.2",
  "PyPDF2>=3.0.1",
  "pytesseract>=0.3.13",
  "langchain>=0.3.8",
  "langchain-community>=0.3.8",
  "langchain-openai>=0.2.10",
  "matplotlib>=3.9.3", 
]
requires-python = ">=3.11,<4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[project.optional-dependencies]
test = [
  "ruff>=0.6.9",
  "pytest>=8.3.3",
  "pytest-cov>=5.0.0",
]

[tool.ruff]
indent-width = 2
line-length = 100

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.pydocstyle]
convention = "google"